--- a/config.env
+++ b/config.env
@@ -2,4 +2,6 @@ CS_CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 CS_CLIENT_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 APIURL=https://api.crowdstrike.com
 APPID=cs-stream-humio
+HUMIO_URL=https://cloud.community.humio.com/api/v1/ingest/hec/raw
 INGEST_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+MAX_LOG_LINE=1000
