--- a/config.env
+++ b/config.env
@@ -1,7 +1,8 @@
 CS_CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 CS_CLIENT_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
-APIURL=https://api.crowdstrike.com
+CS_APIURL=https://api.crowdstrike.com
 APPID=cs-stream-humio
 HUMIO_URL=https://cloud.community.humio.com/api/v1/ingest/hec/raw
 INGEST_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 MAX_LOG_LINE=1000
+PROCESS_CHECK_INTERVAL=60
