--- a/config.env
+++ b/config.env
@@ -4,5 +4,5 @@ CS_APIURL=https://api.crowdstrike.com
 APPID=cs-stream-humio
 HUMIO_URL=https://cloud.community.humio.com/api/v1/ingest/hec/raw
 INGEST_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
-MAX_LOG_LINE=1000
+CS_STREAMING_OFFSET=
 PROCESS_CHECK_INTERVAL=60
