humio to logscale

--- a/config.env
+++ b/config.env
@@ -1,8 +1,10 @@
 CS_CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 CS_CLIENT_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 CS_APIURL=https://api.crowdstrike.com
-APPID=cs-stream-humio
-HUMIO_URL=https://cloud.community.humio.com/api/v1/ingest/hec/raw
-INGEST_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
-CS_STREAMING_OFFSET=
+STREAM_APPID=cs-stream-humio
+LS_URL=https://cloud.community.humio.com/api/v1/ingest/hec/raw
+LS_INGEST_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 PROCESS_CHECK_INTERVAL=60
+
+# Option: You can specify an offset if you do not want to retrieve old events.
+CS_STREAMING_OFFSET=
