--- a/config.env
+++ b/config.env
@@ -6,5 +6,5 @@ LS_URL=https://cloud.community.humio.com/api/v1/ingest/hec/raw
 LS_INGEST_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 PROCESS_CHECK_INTERVAL=60
 
-# Option: You can specify an offset if you do not want to retrieve old events.
+# Option: You can specify an offset to start retrieving events from the specific offset.
 CS_STREAM_OFFSET=
